feat: Load main application script in index.html
Integrates the main application script (`index.tsx`) into the `index.html` file. This ensures that the React application is correctly loaded and bootstrapped within the HTML structure.

--- a/index.html
+++ b/index.html
@@ -131,5 +131,6 @@
 </head>
   <body class="antialiased selection:bg-neutral-900 selection:text-white dark:selection:bg-white dark:selection:text-black">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
