bug and improvements to images and optimization of the navigation bar

--- a/index.html
+++ b/index.html
@@ -3,7 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/jpeg" href="public/images/avatar/profile.jpg" />
     <title>Tolutope Adebayo | Product Designer</title>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Tolutope Adebayo",
+      "url": "https://tolutopeadebayo.com",
+      "image": "https://tolutopeadebayo.com/images/avatar/profile.jpg",
+      "sameAs": [
+        "https://x.com/ToluTopsy",
+        "https://www.linkedin.com/in/tolutopeadebayo/",
+        "https://www.behance.net/tolutopeadebayo"
+      ],
+      "jobTitle": "Senior Product Designer",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Movam"
+      },
+      "description": "A minimalist, high-end product designer specializing in fintech, logistics, and AI interfaces."
+    }
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
