--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/jpeg" href="public/images/avatar/profile.jpg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cstyle%3Etext{font-family:sans-serif;font-weight:900;fill:black}@media(prefers-color-scheme:dark){text{fill:white}}%3C/style%3E%3Ctext x='50' y='55' font-size='35' text-anchor='middle' dominant-baseline='middle'%3ETA()%3C/text%3E%3C/svg%3E" />
     <title>Tolutope Adebayo | Product Designer</title>
     <script type="application/ld+json">
     {
