refactor: Update avatar image format and path
Replaces the JPG avatar image with a PNG version and adjusts the file path in constants.ts and index.html. This ensures the avatar uses a more appropriate format for the web.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       "@type": "Person",
       "name": "Tolutope Adebayo",
       "url": "https://tolutopeadebayo.com",
-      "image": "https://tolutopeadebayo.com/images/avatar/profile.jpg",
+      "image": "https://tolutopeadebayo.com/images/avatar/profile.png",
       "sameAs": [
         "https://x.com/ToluTopsy",
         "https://www.linkedin.com/in/tolutopeadebayo/",
